--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
             <version>2.5.2</version>
+
             <type>jar</type>
         </dependency>
         
@@ -29,4 +30,7 @@
             <version>10.10.1.1</version>
         </dependency>
     </dependencies>
+
+    
+    <name>MapeamentoSimples</name>
 </project>
